[gd_scene load_steps=5 format=2]

[ext_resource path="res://PAMPARAY Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/coinsCounter.gd" type="Script" id=2]
[ext_resource path="res://Assets/sprites/UI/coin/coin_count_mod.tres" type="Animation" id=3]

[sub_resource type="DynamicFont" id=1]
size = 110
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="coinsCounter" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 973.881, 201.787 )
script = ExtResource( 2 )

[node name="coin_bar" type="TextureRect" parent="."]
anchor_right = 0.585
anchor_bottom = 0.122
margin_top = -3.09082
margin_right = 0.199951
margin_bottom = 0.669159
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_tex" type="Label" parent="coin_bar"]
anchor_left = 0.392
anchor_top = 0.306
anchor_right = 0.657
anchor_bottom = 0.756
margin_left = -0.150626
margin_top = 0.0932007
margin_right = -0.203613
margin_bottom = 147.401
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
playback_speed = 2.0
playback/speed = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/coin_count_mod = ExtResource( 3 )
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
